# modulo2/dia18/src/routes/RoleRoutes.js
@@ -1,20 +1,12 @@
 
 import { Router } from 'express'
-import {listarRol} from '../controller/RoleController.js'
+import {listarRol, obtenerRol} from '../controller/RoleController.js'
  
 export const roleRoutes = Router()
 
 roleRoutes.get('/', listarRol)
 
-roleRoutes.get('/:id', (req, res) => {
-    //#swagger.tags = ['Roles']
-    try {
-        res.json({ success: "Obtener Rol" })
-    }
-    catch (error) {
-        res.json({ error: error.message });
-    }
-})
+roleRoutes.get('/:id',obtenerRol)
 
 roleRoutes.post('/', (req, res) => {
     //#swagger.tags = ['Roles']
